fix extra space on new user profile

--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -182,7 +182,6 @@
 .song_nav_bar {
     border-bottom: 2px solid #f2f2f2;
     width: 93.4%;
-    margin: auto;
     display: flex;
     flex-direction: row;
     font-size: 20px;
